crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__multiple-spaces-before-operator_E22.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E221 [*] Multiple spaces before operator
 --> E22.py:3:6
  |
1 | #: E221
2 | a = 12 + 3
3 | b = 4  + 5
  |      ^^
4 | #: E221 E221
5 | x             = 1
  |
help: Replace with single space
  |
2 | a = 12 + 3
  - b = 4  + 5
3 + b = 4 + 5
4 | #: E221 E221
  |

E221 [*] Multiple spaces before operator
 --> E22.py:5:2
  |
3 | b = 4  + 5
4 | #: E221 E221
5 | x             = 1
  |  ^^^^^^^^^^^^^
6 | y             = 2
7 | long_variable = 3
  |
help: Replace with single space
  |
4 | #: E221 E221
  - x             = 1
5 + x = 1
6 | y             = 2
  |

E221 [*] Multiple spaces before operator
 --> E22.py:6:2
  |
4 | #: E221 E221
5 | x             = 1
6 | y             = 2
  |  ^^^^^^^^^^^^^
7 | long_variable = 3
8 | #: E221 E221
  |
help: Replace with single space
  |
5 | x             = 1
  - y             = 2
6 + y = 2
7 | long_variable = 3
  |

E221 [*] Multiple spaces before operator
  --> E22.py:9:5
   |
 7 | long_variable = 3
 8 | #: E221 E221
 9 | x[0]          = 1
   |     ^^^^^^^^^^
10 | x[1]          = 2
11 | long_variable = 3
   |
help: Replace with single space
   |
8  | #: E221 E221
   - x[0]          = 1
9  + x[0] = 1
10 | x[1]          = 2
   |

E221 [*] Multiple spaces before operator
  --> E22.py:10:5
   |
 8 | #: E221 E221
 9 | x[0]          = 1
10 | x[1]          = 2
   |     ^^^^^^^^^^
11 | long_variable = 3
12 | #: E221 E221
   |
help: Replace with single space
   |
9  | x[0]          = 1
   - x[1]          = 2
10 + x[1] = 2
11 | long_variable = 3
   |

E221 [*] Multiple spaces before operator
  --> E22.py:13:9
   |
11 | long_variable = 3
12 | #: E221 E221
13 | x = f(x)          + 1
   |         ^^^^^^^^^^
14 | y = long_variable + 2
15 | z = x[0]          + 3
   |
help: Replace with single space
   |
12 | #: E221 E221
   - x = f(x)          + 1
13 + x = f(x) + 1
14 | y = long_variable + 2
   |

E221 [*] Multiple spaces before operator
  --> E22.py:15:9
   |
13 | x = f(x)          + 1
14 | y = long_variable + 2
15 | z = x[0]          + 3
   |         ^^^^^^^^^^
16 | #: E221:3:14
17 | text = """
   |
help: Replace with single space
   |
14 | y = long_variable + 2
   - z = x[0]          + 3
15 + z = x[0] + 3
16 | #: E221:3:14
   |

E221 [*] Multiple spaces before operator
  --> E22.py:19:14
   |
17 | text = """
18 |     bar
19 |     foo %s"""  % rofl
   |              ^^
20 | #: Okay
21 | x = 1
   |
help: Replace with single space
   |
18 |     bar
   -     foo %s"""  % rofl
19 +     foo %s""" % rofl
20 | #: Okay
   |

E221 [*] Multiple spaces before operator
   --> E22.py:184:5
    |
182 | #:
183 |
184 | if a  ==  1:
    |     ^^
185 |     print(a)
    |
help: Replace with single space
    |
183 |
    - if a  ==  1:
184 + if a ==  1:
185 |     print(a)
    |
