crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__no-indented-block-comment_E11.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
invalid-syntax: Expected an indented block after `if` statement
  --> E11.py:9:1
   |
 7 | #: E112
 8 | if False:
 9 | print()
   | ^^^^^
10 | #: E113
11 | print()
   |

invalid-syntax: Unexpected indentation
  --> E11.py:12:1
   |
10 | #: E113
11 | print()
12 |     print()
   | ^^^^
13 | #: E114 E116
14 | mimetype = 'application/x-directory'
   |

E115 Expected an indented block (comment)
  --> E11.py:30:1
   |
28 | def start(self):
29 |     if True:
30 | #       try:
   | ^
31 | #           self.master.start()
32 | #       except MasterExit:
   |

E115 Expected an indented block (comment)
  --> E11.py:31:1
   |
29 |     if True:
30 | #       try:
31 | #           self.master.start()
   | ^
32 | #       except MasterExit:
33 | #           self.shutdown()
   |

E115 Expected an indented block (comment)
  --> E11.py:32:1
   |
30 | #       try:
31 | #           self.master.start()
32 | #       except MasterExit:
   | ^
33 | #           self.shutdown()
34 | #       finally:
   |

E115 Expected an indented block (comment)
  --> E11.py:33:1
   |
31 | #           self.master.start()
32 | #       except MasterExit:
33 | #           self.shutdown()
   | ^
34 | #       finally:
35 | #           sys.exit()
   |

E115 Expected an indented block (comment)
  --> E11.py:34:1
   |
32 | #       except MasterExit:
33 | #           self.shutdown()
34 | #       finally:
   | ^
35 | #           sys.exit()
36 |         self.master.start()
   |

E115 Expected an indented block (comment)
  --> E11.py:35:1
   |
33 | #           self.shutdown()
34 | #       finally:
35 | #           sys.exit()
   | ^
36 |         self.master.start()
37 | #: E117
   |

invalid-syntax: Expected an indented block after `if` statement
  --> E11.py:45:1
   |
43 | #: E112
44 | if False:  #
45 | print()
   | ^^^^^
46 | #:
47 | if False:
   |
