crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__no-indented-block_E11.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E112 Expected an indented block
  --> E11.py:9:1
   |
 7 | #: E112
 8 | if False:
 9 | print()
   | ^
10 | #: E113
11 | print()
   |

invalid-syntax: Expected an indented block after `if` statement
  --> E11.py:9:1
   |
 7 | #: E112
 8 | if False:
 9 | print()
   | ^^^^^
10 | #: E113
11 | print()
   |

invalid-syntax: Unexpected indentation
  --> E11.py:12:1
   |
10 | #: E113
11 | print()
12 |     print()
   | ^^^^
13 | #: E114 E116
14 | mimetype = 'application/x-directory'
   |

E112 Expected an indented block
  --> E11.py:45:1
   |
43 | #: E112
44 | if False:  #
45 | print()
   | ^
46 | #:
47 | if False:
   |

invalid-syntax: Expected an indented block after `if` statement
  --> E11.py:45:1
   |
43 | #: E112
44 | if False:  #
45 | print()
   | ^^^^^
46 | #:
47 | if False:
   |
