crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__no-space-after-block-comment_E26.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E265 [*] Block comment should start with `# `
  --> E26.py:10:1
   |
 8 | x = y + 1  #:  Increment x
 9 | #: E265:1:1
10 | #Block comment
   | ^^^^^^^^^^^^^^
11 | a = 1
12 | #: E265:2:1
   |
help: Format space
   |
9  | #: E265:1:1
   - #Block comment
10 + # Block comment
11 | a = 1
   |

E265 [*] Block comment should start with `# `
  --> E26.py:14:1
   |
12 | #: E265:2:1
13 | m = 42
14 | #! This is important
   | ^^^^^^^^^^^^^^^^^^^^
15 | mx = 42 - 42
16 | #: E266:3:5 E266:6:5
   |
help: Format space
   |
13 | m = 42
   - #! This is important
14 + # ! This is important
15 | mx = 42 - 42
   |

E265 [*] Block comment should start with `# `
  --> E26.py:25:1
   |
23 |     return
24 | #: E265:1:1 E266:2:1
25 | ##if DEBUG:
   | ^^^^^^^^^^^
26 | ##    logging.error()
27 | #: W291:1:42
   |
help: Format space
   |
24 | #: E265:1:1 E266:2:1
   - ##if DEBUG:
25 + # if DEBUG:
26 | ##    logging.error()
   |

E265 [*] Block comment should start with `# `
  --> E26.py:32:1
   |
31 | #: Okay
32 | #!/usr/bin/env python
   | ^^^^^^^^^^^^^^^^^^^^^
33 |
34 | pass  # an inline comment
   |
help: Format space
   |
31 | #: Okay
   - #!/usr/bin/env python
32 + # !/usr/bin/env python
33 |
   |

E265 [*] Block comment should start with `# `
  --> E26.py:73:1
   |
71 | # F   Means test is failing (F)
72 | # EF  Means test is giving error and Failing
73 | #!   Means test is segfaulting
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
74 | # 8   Means test runs forever
   |
help: Format space
   |
72 | # EF  Means test is giving error and Failing
   - #!   Means test is segfaulting
73 + # !   Means test is segfaulting
74 | # 8   Means test runs forever
   |

E265 [*] Block comment should start with `# `
  --> E26.py:78:1
   |
76 | #: Colon prefix is okay
77 |
78 | ###This is a variable ###
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
79 |
80 | # We should strip the space, but preserve the hashes.
   |
help: Format space
   |
77 |
   - ###This is a variable ###
78 + # This is a variable ###
79 |
   |
