crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__over-indented_E11.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E117 Over-indented
 --> E11.py:6:1
  |
4 | #: E111 E117
5 | if True:
6 |      print()
  | ^^^^^
7 | #: E112
8 | if False:
  |

invalid-syntax: Expected an indented block after `if` statement
  --> E11.py:9:1
   |
 7 | #: E112
 8 | if False:
 9 | print()
   | ^^^^^
10 | #: E113
11 | print()
   |

invalid-syntax: Unexpected indentation
  --> E11.py:12:1
   |
10 | #: E113
11 | print()
12 |     print()
   | ^^^^
13 | #: E114 E116
14 | mimetype = 'application/x-directory'
   |

E117 Over-indented
  --> E11.py:39:1
   |
37 | #: E117
38 | def start():
39 |         print()
   | ^^^^^^^^
40 | #: E117 W191
41 | def start():
   |

E117 Over-indented
  --> E11.py:42:1
   |
40 | #: E117 W191
41 | def start():
42 |         print()
   | ^^^^^^^^
43 | #: E112
44 | if False:  #
   |

invalid-syntax: Expected an indented block after `if` statement
  --> E11.py:45:1
   |
43 | #: E112
44 | if False:  #
45 | print()
   | ^^^^^
46 | #:
47 | if False:
   |
