crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__shebang.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E265 [*] Block comment should start with `# `
 --> shebang.py:3:1
  |
1 | #!/usr/bin/python
2 | #
3 | #!
  | ^^
4 | #:
  |
help: Format space
  |
3 | # !
  |  +
