crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__tab-after-keyword_E27.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E273 [*] Tab after keyword
  --> E27.py:11:9
   |
 9 |     pass
10 | #: E273
11 | True and        False
   |         ^^^^^^^^
12 | #: E273 E274
13 | True        and    False
   |
help: Replace with single space
   |
10 | #: E273
   - True and		False
11 + True and False
12 | #: E273 E274
   |

E273 [*] Tab after keyword
  --> E27.py:13:10
   |
11 | True and        False
12 | #: E273 E274
13 | True        and    False
   |                ^^^^
14 | #: E271
15 | a and  b
   |
help: Replace with single space
   |
12 | #: E273 E274
   - True		and	False
13 + True		and False
14 | #: E271
   |

E273 [*] Tab after keyword
  --> E27.py:27:6
   |
25 | this  and False
26 | #: E273
27 | a and    b
   |      ^^^^
28 | #: E274
29 | a        and b
   |
help: Replace with single space
   |
26 | #: E273
   - a and	b
27 + a and b
28 | #: E274
   |

E273 [*] Tab after keyword
  --> E27.py:31:10
   |
29 | a        and b
30 | #: E273 E274
31 | this        and    False
   |                ^^^^
32 | #: Okay
33 | from u import (a, b)
   |
help: Replace with single space
   |
30 | #: E273 E274
   - this		and	False
31 + this		and False
32 | #: Okay
   |

E273 [*] Tab after keyword
  --> E27.py:74:5
   |
73 | #: E273
74 | type    Number = int
   |     ^^^^
75 |
76 | #: E275
   |
help: Replace with single space
   |
73 | #: E273
   - type	Number = int
74 + type Number = int
75 |
   |
